tests/ui/consts/issue-67696-const-prop-ice.stderr
error[E0277]: the trait bound `[for<'a> fn(&'a ())]: Copy` is not satisfied
  --> $DIR/issue-67696-const-prop-ice.rs:12:33
   |
LL |     fn foo(&self) -> Self where Self: Copy { *(&[] as &[_]) }
   |                                 ^^^^^^^^^^ the trait `Copy` is not implemented for `[for<'a> fn(&'a ())]`
   |
help: the trait `Copy` is implemented for `[T; N]`
  --> $SRC_DIR/core/src/array/mod.rs:LL:COL
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
LL + #![feature(trivial_bounds)]
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
